# polli

./: .arcconfig  .arclint  .clang-tidy  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
lib/: AliasCheckCodeGen.cpp  CMakeLists.txt  FunctionDispatcher.cpp  InstrumentRegions.cpp  JitScopDetection.cpp  NonAffineScopDetection.cpp  PapiProfiling.cpp  PolyJIT.cpp  PolyJITEmitter.cpp  RegisterCompilationPasses.cpp  RuntimeOptimizer.cpp  ScopMapper.cpp  Utils.cpp  VariantFunction.cpp  libpjit.cpp  pprofScopPass.cpp  profileScopDetectionPass.cpp
lib/Analysis/: CMakeLists.txt  JitScopDetection.cpp  NonAffineSCEVs.cpp  ScopDetection.cpp  ScopDetectionCheckers.cpp
lib/Extract/: CMakeLists.txt  ModuleExtraction.cpp
lib/LibPJIT/: BlockingMap.cpp  CMakeLists.txt  CodeGen.cpp  Compiler.cpp  Db.cpp  ExportMetrics.cpp  Jit.cpp  RunValues.cpp  libpjit.cpp
lib/LibPPROF/: CMakeLists.txt  Tracing.cpp  libpprof-file.cpp  libpprof-pgsql.cpp  libpprof.cpp  pprof.cpp
lib/Persist/: CMakeLists.txt  Schema.cpp
lib/PolyJIT/: AliasCheckCodeGen.cpp  CMakeLists.txt  FunctionDispatcher.cpp  InstrumentRegions.cpp  JitScopDetection.cpp  LikwidMarker.cpp  ModuleExtraction.cpp  Options.cpp  PapiProfiling.cpp  PolyJIT.cpp  RegisterCompilationPasses.cpp  RuntimeOptimizer.cpp  ScopDetectionCheckers.cpp  ScopMapper.cpp  Utils.cpp  VariantFunction.cpp
lib/Runtime/: BasePointers.cpp  CMakeLists.txt  FunctionDispatcher.cpp  LikwidMarker.cpp  RuntimeOptimizer.cpp  VariantFunction.cpp
lib/Support/: CMakeLists.txt  FuncTools.cpp  Log.cpp  Options.cpp  Stats.cpp  Tasks.cpp  TypeMapper.cpp  Utils.cpp
lib/Transform/: AliasCheckCodeGen.cpp  CMakeLists.txt  InstrumentRegions.cpp  ProfileScops.cpp  ScopMapper.cpp
lib/pjit/: CMakeLists.txt  Caching.cpp  CodeGen.cpp  Compiler.cpp  Db.cpp  Jit.cpp  RunValues.cpp  libpjit.cpp
lib/pjit-logging/: CMakeLists.txt  Log.cpp
lib/pprof/: CMakeLists.txt  README.md  Tracing.cpp  libpprof-csv.cpp  libpprof-file.cpp  libpprof-pgsql.cpp  libpprof.cpp  perf.cpp  pprof.cpp
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/BasePointers/: simple-basepointer.c
test/Catch/: CMakeLists.txt  test_RunValues.cpp  test_RuntimeValues.cpp
test/Globals/: global-int-var.c  global-multiple-structs.c  global-struct-var.c  global-var.c
test/JitScops/: linpack_daxpy_r_for.body.scop0.ll  linpack_daxpy_r_for.cond28.preheader.scop1.ll  linpack_daxpy_ur_for.body.scop1.ll  linpack_daxpy_ur_for.cond30.preheader.scop0.ll  linpack_ddot_r_for.cond21.preheader.scop1.ll  linpack_ddot_r_for.inc.scop0.ll  linpack_ddot_ur_for.cond23.preheader.scop0.ll  linpack_ddot_ur_for.inc.scop1.ll  linpack_matgen_for.body36.scop0.ll  nlp.ll  non-linear-ivars.c
test/NonAffineScopDetection/: nl.c  nl.s  nl_param_access_noarg.c  nl_param_access_noarg.ll  nlp.ll  non-linear-ivars.c  non-linear-ivars.ll  non-linear-param.c  non-linear-param.ll  ptr.c  ptr.s  scevtest.bc  scevtest.c  scevtest.ll  simple_invalid_scop.c  simple_invalid_scop.ll  simple_non_linear_it_var_access_fct.bc  simple_non_linear_it_var_access_fct.ll  simple_non_linear_param_access_fct.bc  simple_non_linear_param_access_fct.c  simple_non_linear_param_access_fct.ll
test/Run/: 1-param.c  1-struct-param.c  2-struct-param.c  ptr-param.c
test/Unit/: CMakeLists.txt  Schema.cpp
test/pprof/2mm/: main_for.body.15.i.pjit.scop.ll
test/pprof/3mm/: main_for.body.16.i.pjit.scop.ll
test/pprof/7z/: _ZNK8NArchive3N7z7CFolder14CheckStructureEj_for.cond.130.preheader.pjit.scop.ll
test/pprof/MultiSourceApplications/: CalculateQuant8Param_for.cond.1.preheader.pjit.scop.ll  CalculateQuantParam_for.cond.1.preheader.pjit.scop.ll  bark_noise_hybridmp_for.end.194.pjit.scop.ll  dct_luma_16x16_for.cond.72.preheader.pjit.scop.ll  dpb_combine_field_for.cond.4.preheader.pjit.scop.ll  dradbg_for.body.537.lr.ph.pjit.scop.ll  ercPixConcealIMB_for.body.6.lr.ph.i.pjit.scop.ll  find_sad_16x16_for.cond.124.preheader.pjit.scop.ll  getVerSubImageSixTap_for.cond.199.preheader.pjit.scop.ll  initialize_board_for.cond.67.preheader.lr.ph.pjit.scop.ll  mix32_entry.split.pjit.scop.ll  unmix24_entry.split.pjit.scop.ll  vexopy_entry.split.pjit.scop.ll  vorbis_lpc_to_lsp_if.end.pjit.scop.ll
test/pprof/MultiSourceBenchmarks/: Crystal_Cholesky_for.cond.107.preheader.pjit.scop.ll  Crystal_div_for.body.22.lr.ph.pjit.scop.ll  DoLUIteration_entry.split.pjit.scop.ll  Gsm_Short_Term_Synthesis_Filter_while.body.i.pjit.scop.ll  HYPRE_StructDiagScale_for.body.429.lr.ph.us.us.pjit.scop.ll  H__align_if.else.625.pjit.scop.ll  JTTmtx_for.body.768.lr.ph.pjit.scop.ll  L3psycho_anal_for.end.1341.pjit.scop.ll  MSalignmm_rec_for.body.31.i.pjit.scop.ll  R__align_if.else.799.pjit.scop.ll  Reference_IDCT_for.cond.1.preheader.pjit.scop.ll  Vside_if.then.27.pjit.scop.ll  _Z8wavModelR5Mixer_for.body.402.us.pjit.scop.ll  _ZN17btSoftBodyHelpers11CreatePatchER19btSoftBodyWorldInfoRK9btVector3S4_S4_S4_iiib_for.body.lr.ph.pjit.scop.ll  _ZNK8NArchive3N7z7CFolder14CheckStructureEv_for.cond.123.preheader.pjit.scop.ll  begin_for.body.105.pjit.scop.ll  compute_next_for.body.33.lr.ph.pjit.scop.ll  compute_next_for.body.68.lr.ph.pjit.scop.ll  dnon_max_for.cond.2.preheader.pjit.scop.ll  examboard_for.cond.2.preheader.pjit.scop.ll  form_component_prediction_for.cond.110.preheader.lr.ph.pjit.scop.ll  hypre_CyclicReduction_for.body.1455.lr.ph.us.us.pjit.scop.ll  hypre_PointRelax_for.body.1521.lr.ph.us.us.pjit.scop.ll  hypre_SMG2RAPPeriodicNoSym_for.body.229.lr.ph.us.us.pjit.scop.ll  hypre_SMG3RAPPeriodicSym_for.body.348.lr.ph.us.us.pjit.scop.ll  hypre_SMGAxpy_for.body.345.lr.ph.us.us.pjit.scop.ll  hypre_SMGResidual_for.body.314.lr.ph.us.us.pjit.scop.ll  hypre_SMGSetupInterpOp_for.body.442.lr.ph.us.us.pjit.scop.ll  hypre_SemiInterp_for.body.333.lr.ph.us.us.pjit.scop.ll  hypre_SemiRestrict_for.body.622.lr.ph.us.us.pjit.scop.ll  hypre_StructAxpy_for.body.307.lr.ph.us.us.pjit.scop.ll  hypre_StructCopy_for.body.307.lr.ph.us.us.pjit.scop.ll  hypre_StructMatrixSetBoxValues_for.body.385.lr.ph.us.us.pjit.scop.ll  match_calc_for.body.31.pjit.scop.ll  (+13 more)
tools/polli/: CMakeLists.txt  PolyJIT.cpp  PolyJIT.h  polli.cpp
(+243 files in other folders)
